# LearningHaskell

./: .dockerignore  .gitignore  Dockerfile  FizzBuzz.hs  Makefile  README.md  learning-haskell.cabal
.devcontainer/: devcontainer.json
app/: Main.hs
src/: Apply.hs  Eval.hs  Fib.hs  Listless.hs
test/: Spec.hs
